--- a/package.json
+++ b/package.json
@@ -1,47 +1,45 @@
 {
-  "name": "connect-picture",
-  "version": "0.0.1",
-  "license": "SEE LICENSE IN LICENSE",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
+  "name": "picture-connecter",
+  "version": "0.1.1",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-    "start": "webpack-dev-server --inline --colors --watch --display-error-details --display-cached  --port 3001 --hot",
-    "test": "karma start",
-	"build": "webpack",
-	"initDev": "npm i && typings install && npm install && npm start"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "initDev": "typings install && npm install && npm run start"
   },
+  "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "^0.19.27",
-    "zone.js": "^0.6.12"
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ng2-bootstrap": "^1.3.3",
+    "rxjs": "^5.0.1",
+    "ts-helpers": "^1.1.1",
+    "ui-router-core": "^4.0.0",
+    "ui-router-ng2": "^1.0.0-beta.4",
+    "ui-router-visualizer": "^3.1.1",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^0.17.0",
-    "core-js": "^2.4.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-coverage": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "phantomjs-prebuilt": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "source-map-loader": "^0.1.5",
-    "typescript": "^1.8.10",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "@angular/cli": "1.0.0-beta.30",
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "@types/whatwg-fetch": "0.0.33",
+    "codelyzer": "~2.0.0-beta.1",
+    "shx": "^0.2.2",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3"
   }
 }
